# docx_translator

./: .gitignore  environment.yml  pyproject.toml  translate_fr2en.py  translate_notebook.ipynb
